--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Flip Clock Online – Aesthetic Minimal Clock with Seconds</title>
-  <meta name="description" content="Beautiful flip clock online with smooth flip animations. Fullscreen, with seconds, 12/24-hour, themes, time zones, and optional lo-fi ambience. Minimal and distraction-free." />
+  <meta name="description" content="Beautiful flip clock online with smooth flip animations. Fullscreen, themes, 12/24-hour, time zones, and optional lo-fi ambience. Minimal and distraction-free." />
   <link rel="canonical" href="https://flipclock.info/" />
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
   
