--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
   }
 </script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V2S2N6PXRP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-V2S2N6PXRP');
+</script>
+
 
   <style>
     html,body{height:100%}
