--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   width: 3%;               /* 铰链宽度 */
   height: 14%;              /* 铰链长度，占面板高度比例 */
   /*background: linear-gradient(to bottom, #00bcd4, #007a99); */
-  background: url("./test.png") center center / cover no-repeat;
+  background: url("/img/hinge.png") center center / cover no-repeat;
 
   border-radius: 2px;
   transform: translateY(-50%);
