--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     flex-direction: column;              /* 关键：从横排改竖排 */
     justify-content: center;
     gap: clamp(16px, 4vh, 28px);         /* 行与行之间的间距 */
-    top: -5%;
+    /*top: -5%;*/
   }
   .tick {
     /* 小屏适配的字号，你可按需微调 */
