--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
   <!-- <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="fonts/remixicon.css" >
-  <link rel="stylesheet" href="assets/fonts.css">
+  <link rel="stylesheet" href="/fonts/remixicon.css" >
+  <link rel="stylesheet" href="/assets/fonts.css">
 
   <link rel="stylesheet" href="/flip/flip.min.css" >
   <script src="/flip/flip.min.js"></script>
