--- a/index.html
+++ b/index.html
@@ -958,6 +958,9 @@ figure img.thumbnail {
           <a href="https://wired.business" target="_blank"><img src="https://wired.business/badge0-white.svg" alt="Featured on Wired Business" width="200" height="54"></a>
           <a href="https://dofollow.tools" target="_blank"><img src="https://dofollow.tools/badge/badge_light.svg" alt="Featured on Dofollow.Tools" width="200" height="54" /></a>
           <a href="https://startupfa.me/s/flipclock.info?utm_source=flipclock.info" target="_blank"><img src="https://startupfa.me/badges/featured-badge.webp" alt="flipclock.info - Featured on Startup Fame" width="171" height="54" /></a>
+          <a href="https://toolfame.com/item/flipclock-info" target="_blank" rel="noopener noreferrer">
+          <img src="https://toolfame.com/badge-light.svg" alt="Featured on toolfame.com" style="height: 54px; width: auto;" />
+          </a>
 
 
           <!-- Add more icons as needed -->
