--- a/index.html
+++ b/index.html
@@ -959,8 +959,8 @@ figure img.thumbnail {
           <a href="https://dofollow.tools" target="_blank"><img src="https://dofollow.tools/badge/badge_light.svg" alt="Featured on Dofollow.Tools" width="200" height="54" /></a>
           <a href="https://startupfa.me/s/flipclock.info?utm_source=flipclock.info" target="_blank"><img src="https://startupfa.me/badges/featured-badge.webp" alt="flipclock.info - Featured on Startup Fame" width="171" height="54" /></a>
           <a href="https://toolfame.com/item/flipclock-info" target="_blank" rel="noopener noreferrer">
-          <img src="https://toolfame.com/badge-light.svg" alt="Featured on toolfame.com" style="height: 54px; width: auto;" />
-          </a>
+          <img src="https://toolfame.com/badge-light.svg" alt="Featured on toolfame.com" style="height: 54px; width: auto;" /></a>
+          <a href="https://dang.ai/" target="_blank" ><img src="https://cdn.prod.website-files.com/63d8afd87da01fb58ea3fbcb/6487e2868c6c8f93b4828827_dang-badge.png" alt="Dang.ai" style="width: 150px; height: 54px;" width="150" height="54"/></a>
 
 
           <!-- Add more icons as needed -->
