--- a/index.html
+++ b/index.html
@@ -961,6 +961,8 @@ figure img.thumbnail {
           <a href="https://toolfame.com/item/flipclock-info" target="_blank" rel="noopener noreferrer">
           <img src="https://toolfame.com/badge-light.svg" alt="Featured on toolfame.com" style="height: 54px; width: auto;" /></a>
           <a href="https://dang.ai/" target="_blank" ><img src="https://cdn.prod.website-files.com/63d8afd87da01fb58ea3fbcb/6487e2868c6c8f93b4828827_dang-badge.png" alt="Dang.ai" style="width: 150px; height: 54px;" width="150" height="54"/></a>
+          <a href="https://saasfame.com/item/flipclock-info" target="_blank" rel="noopener noreferrer">
+          <img src="https://saasfame.com/badge-light.svg" alt="Featured on saasfame.com" style="height: 54px; width: auto;" /></a>
 
 
           <!-- Add more icons as needed -->
