--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="canonical" href="https://flipclock.info/" />
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
   
+  <meta name="google-adsense-account" content="ca-pub-5462377564130702">
+
   <link rel="icon" type="/image/png" href="img/favicon.png">
   <link rel="preconnect" href="https://unpkg.com" crossorigin>
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
@@ -20,6 +22,10 @@
   <script src="/flip/flip.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@pqina/flip/dist/flip.min.css">
   <script src="https://cdn.jsdelivr.net/npm/@pqina/flip/dist/flip.min.js"></script>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5462377564130702"
+     crossorigin="anonymous"></script>
+
 
   <script type="application/ld+json">
   {
