--- a/index.html
+++ b/index.html
@@ -977,6 +977,8 @@ figure img.thumbnail {
 
           <a href="https://startupfa.me/s/flipclock.info?utm_source=flipclock.info" target="_blank"><img loading="lazy" src="https://startupfa.me/badges/featured-badge-small.webp" alt="flipclock.info - Featured on Startup Fame" width="224" height="36" /></a>
 
+          <a href="https://fazier.com/launches/flipclock.info" target="_blank"><img loading="lazy" src="https://fazier.com/api/v1//public/badges/launch_badges.svg?badge_type=featured&theme=light" width=250 alt="Fazier badge" /></a>
+
 
           <!-- Add more icons as needed -->
         </div>
