--- a/index.html
+++ b/index.html
@@ -990,6 +990,14 @@ figure img.thumbnail {
 
           <a href="https://fazier.com/launches/flipclock.info" target="_blank"><img loading="lazy" src="https://fazier.com/api/v1//public/badges/launch_badges.svg?badge_type=featured&theme=light" width=250 alt="Fazier badge" /></a>
 
+          <a href="https://findly.tools/flipclock?utm_source=flipclock" target="_blank">
+  <img loading="lazy"
+    src="https://findly.tools/badges/findly-tools-badge-light.svg" 
+    alt="Featured on findly.tools" 
+    width="150" 
+  />
+</a>
+
 
           <!-- Add more icons as needed -->
         </div>
